<resources

    >
    <string name="app_name" translatable="false">cRFID</string>
    <string name="c_rfid" translatable="false">C-RFID</string>
    <string name="detail" translatable="false">Detail</string>
    <string name="po_list" translatable="false">PO List</string>
    <string name="item_detail" translatable="false">Item Detail</string>
    <string name="back" translatable="false">Back</string>
    <string name="goods_receipt" translatable="false">Goods Receipt</string>
    <string name="description_for_good_receipt" translatable="false">Description for Good Receipt</string>
    <string name="print_and_reprint" translatable="false">Print and Reprint</string>
    <string name="description_for_print_and_reprint" translatable="false">Description for Print and Reprint</string>
    <string name="goods_receipt1" translatable="false">Goods Receipt</string>
    <string name="inbound" translatable="false">INBOUND</string>
    <string name="internal" translatable="false">INTERNAL</string>
    <string name="outbound" translatable="false">OUTBOUND</string>
    <string name="dashboard" translatable="false">Dashboard</string>
    <string name="create_assets" translatable="false">Create Assets</string>
    <string name="locate_assets" translatable="false">Locate Assets</string>
    <string name="read_material" translatable="false">Read Material</string>
    <string name="large_text" translatable="false">vhsdjvsjnjsvnsdjvndsjvnsdjvdjvsdvnjsdvnsljkvnsdjv</string>
    <string name="locate_material" translatable="false">Locate Material</string>
    <string name="material_issue" translatable="false">Material Issue</string>
    <string name="material_tag_pair" translatable="false">Material TAG Pair</string>
    <string name="material_tag_unpair" translatable="false">MAT TAG Unpair</string>
    <string name="create_material" translatable="false">Create Material</string>
    <string name="title_activity_read_material" translatable="false">ReadMaterial</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="discrepancy" translatable="false">Discrepancy:</string>
    <string name="count" translatable="false">Count:</string>
    <string name="warehouse_management_system" translatable="false">Warehouse Management System</string>
    <string name="cycle_counting1" translatable="false">Physical Inventory</string>
    <string name="cycle_counting" translatable="false">Cycle Counting</string>
    <string name="hello_world" translatable="false">Hello world!</string>
    <string name="rapid_read" translatable="false">Rapid Read</string>
    <string name="title_activity_inventory" translatable="false">InventoryActivity</string>
    <string-array name="options_array">
        <item>Home</item>
        <item>Rapid Read</item>
        <item>Inventory</item>
        <item>Locate Tag</item>
        <item>Settings</item>
        <item>Tag Write</item>
        <item>Pre Filters</item>
        <item>Readers List</item>
        <item>About</item>
        <item>Profiles</item>
    </string-array>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">INSTANT VISIBLITY INTO YOUR OPERATIONS</string>
    <string name="nav_header_desc" translatable="false">123RFID Mobile</string>
    <string name="drawer_open" translatable="false">Open navigation drawer</string>
    <string name="drawer_close" translatable="false">Close navigation drawer</string>
    <string name="action_websearch" translatable="false">Web search</string>
    <string name="app_not_available" translatable="false">Sorry, there\'s no web browser available</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="action_none" translatable="false">None</string>
    <string name="action_user" translatable="false">User</string>
    <string name="action_reserved" translatable="false">Reserved</string>
    <string name="action_tid" translatable="false">TID</string>
    <string name="action_epic" translatable="false">EPC</string>
    <string name="title_activity_antenna_settings" translatable="false">Antenna</string>
    <string name="title_activity_readers_list" translatable="false">Readers List</string>
    <string name="title_activity_application_settings" translatable="false">Application</string>
    <string name="title_activity_singulation_control" translatable="false">Singulation Control</string>
    <string name="unique_tag_settings" translatable="false">Unique Tag Settings</string>
    <string name="unique_tag_reads" translatable="false">Report Unique tags</string>
    <string name="report_unique_tags" translatable="false">Report Unique tags</string>
    <string-array name="link_profile_array">
        <item>RF Mode 1</item>
        <item>RF Mode 2</item>
        <item>RR Mode 1</item>
        <item>RR Mode 2</item>
        <item>RS Mode 1</item>
        <item>RS Mode 2</item>
    </string-array>
    <string-array name="session_array">
        <item>S0</item>
        <item>S1</item>
        <item>S2</item>
        <item>S3</item>
    </string-array>
    <string-array name="tag_population_array">
        <item>30</item>
        <item>100</item>
        <item>200</item>
        <item>300</item>
        <item>400</item>
        <item>500</item>
        <item>600</item>
    </string-array>
    <string-array name="inventory_state_array">
        <item>STATE A</item>
        <item>STATE B</item>
        <item>AB FLIP</item>
    </string-array>
    <string-array name="sl_flags_array">
        <item>ALL</item>
        <item>DEASSERTED</item>
        <item>ASSERTED</item>
    </string-array>
    <string-array name="inv_menu_items">
        <item>None</item>
        <item>User</item>
        <item>Reserved</item>
        <item>TID</item>
        <item>EPC</item>
    </string-array>
    <string-array name="acess_read_write_memory_bank_array">
        <item>EPC</item>
        <item>TID</item>
        <item>USER</item>
        <item>ACCESS PASSWORD</item>
        <item>KILL PASSWORD</item>
    </string-array>
    <string-array name="acess_lock_memory_bank_array">
        <item>EPC</item>
        <item>ACCESS PWD</item>
        <item>KILL PWD</item>
        <item>TID</item>
        <item>USER</item>
        <item>ALL</item>
    </string-array>
    <string-array name="acess_lock_privilege_array">
        
        <item>Read and Write</item>
        <item>Permanent Lock</item>
        <item>Permanent Unlock</item>
        <item>Unlock</item>
    </string-array>
    <string-array name="pre_filter_memory_bank_array">
        <item>EPC</item>
        <item>TID</item>
        <item>USER</item>
    </string-array>
    <string-array name="pre_filter_action_array">
        <item>INV A NOT INV B OR ASRT SL NOT DSRT SL</item>
        <item>INV A OR ASRT SL</item>
        <item>NOT INV B OR NOT DSRT SL</item>
        <item>INV A2BB2A NOT INV A OR NEG SL NOT ASRT SL</item>
        <item>INV B NOT INV A OR DSRT SL NOT ASRT SL</item>
        <item>INV B OR DSRT SL</item>
        <item>NOT INV A OR NOT ASRT SL</item>
        <item>NOT INV A2BB2A OR NOT NEG SL</item>
    </string-array>
    <string-array name="pre_filter_target_options">
        <item>SESSION S0</item>
        <item>SESSION S1</item>
        <item>SESSION S2</item>
        <item>SESSION S3</item>
        <item>SL FLAG</item>
    </string-array>
    <string-array name="pre_filter_tag_id_array">
        <item>AD9915404190725965400412</item>
        <item>AD9915404190725965400413</item>
        <item>AD9915404190725965400414</item>
        <item>AD9915404190725965400415</item>
        <item>AD9915404190725965400416</item>
    </string-array>
    <string name="title_activity_navigation_drawer" translatable="false">NavigationDrawerActivity</string>
    <string name="title_activity_access_operations" translatable="false">TagWriteActivity</string>
    <string-array name="start_trigger_array">
        <item>Immediate</item>
        <item>Handheld</item>
        <item>Periodic</item>
    </string-array>
    <string-array name="stop_trigger_array">
        <item>Immediate</item>
        <item>Handheld</item>
        <item>Duration</item>
        <item>Tag Observation</item>
        <item>N attempts</item>
    </string-array>
    <string-array name="beeper_volume_array">
        <item>High</item>
        <item>Medium</item>
        <item>Low</item>
    </string-array>
    <string-array name="pie_array">
        <item>1500</item>
        <item>2000</item>
    </string-array>
    <string-array name="pie0_array">
        <item>0</item>
    </string-array>
    <string-array name="pie_array_668">
        <item>668</item>
    </string-array>
    <string-array name="pie_array_2000">
        <item>2000</item>
    </string-array>
    <string-array name="tari_array">
        <item>6250</item>
        <item>12500</item>
        <item>14600</item>
        <item>16700</item>
        <item>18800</item>
        <item>20900</item>
        <item>23000</item>
        <item>25000</item>
    </string-array>
    <string-array name="tari_array_625">
        <item>6250</item>
    </string-array>
    <string-array name="tari_array_668">
        <item>668</item>
    </string-array>
    <string-array name="tari0_array">
        <item>0</item>
    </string-array>
    <string-array name="tari_array_12_25">
        <item>12500</item>
        <item>14600</item>
        <item>16700</item>
        <item>18800</item>
        <item>20900</item>
        <item>23000</item>
        <item>25000</item>
    </string-array>
    <string-array name="tari_array_18_25">
        <item>18800</item>
        <item>20900</item>
        <item>23000</item>
        <item>25000</item>
    </string-array>
    <string-array name="tari_array_18">
        <item>12500</item>
        <item>14600</item>
        <item>16700</item>
        <item>18800</item>
    </string-array>
    <string-array name="tari_array_18_only">
        <item>18800</item>
    </string-array>
    <string-array name="tari_array_25_only">
        <item>25000</item>
    </string-array>
    <string-array name="tari_array_25_6300">
        <item>12500</item>
        <item>18800</item>
        <item>25000</item>
    </string-array>
    <string-array name="tari_array_18_6300">
        <item>12500</item>
        <item>18800</item>
    </string-array>
    <string name="none_paired" translatable="false">No Devices Found</string>
    <string name="select_device" translatable="false">Select A Device</string>
    <string name="none_found" translatable="false">No Devices Found</string>
    <string name="error_security" translatable="false">Security Error in SerialPortActivity</string>
    <string name="error_unknown" translatable="false">Unknown Error in Serial Port Activity</string>
    <string name="error_configuration" translatable="false">Configuration Error in SerialPortActivity</string>
    <string name="title_activity_base_receiver" translatable="false">BaseReceiverActivity</string>
    <string name="error_unsatisfied_link" translatable="false">UnsatisfiedLinkError in SerialPortActivity</string>
    <string name="title_activity_main_activity2" translatable="false">MainActivity2</string>
    <string name="title_activity_regulatory_settings" translatable="false">Regulatory</string>
    <string name="title_activity_start_stop_trigger" translatable="false">Start\\Stop Triggers</string>
    <string name="title_activity_save_configuration" translatable="false">Save Configuration</string>
    <string name="title_activity_about" translatable="false">About</string>
    <string name="title_activity_beeper" translatable="false">Beeper</string>
    <string name="led_settings_title" translatable="false">LED Settings</string>
    <string name="action_refresh" translatable="false">Refresh</string>
</resources>